  26 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> otopi-9999.ebuild:
  Add local version support

  18 Apr 2013; Alon Bar-Lev <alonbl@gentoo.org> otopi-1.0.1.ebuild,
  otopi-9999.ebuild:
  move gettext to DEPEND

  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +metadata.xml:
  setup layout