@@ -1,1 +1,2 @@
 DIST otopi-1.0.1.tar.gz 457883 SHA256 c82df4572fecba568677704a8fc5831e7d7b5c393b3aad9fafd81e166154c8bd SHA512 8863181514a381dd34074eb7c1d7ec7c6efaba8d421f20b9e9698c8fe4738d67e8f89edab4d87790de22507867aa90b01157fb2b0c91a5cb468067c7fc2f7d1f WHIRLPOOL 26fa7f309ca1447438e20831087b1fb53e769f61456093951cd2b464cc314c4baa4f344c99df37bad9b080a756e0b0b213295a82a772340f6e94f4f28b59184c
+DIST otopi-1.1.0.tar.gz 282870 SHA256 02d7f8f4a17ffbe6722e34562cecffbd5646eb43b32da0cd1137a065680fcaad SHA512 8e4c609ca8617999cb2a9575be71d9f785dc1b014099bf28b8df63a8ff726f7223fc2807020583ef66e433bf94dc0519cff5262ec8e8fb2506ffc470dd0466b1 WHIRLPOOL 03ac79cf159ff7f1e423dedd62b06dedc8858378d0cf069df8d708932cfbc4ea4d4032c3ce15e601c288ab797c8208197f8cbd57e69c409aeea3c8b3c5141fff
