@@ -1,3 +1,9 @@
+*otopi-1.1.0 (27 Aug 2013)
+
+  27 Aug 2013; Alon Bar-Lev <alonbl@redhat.com> +otopi-1.1.0.ebuild,
+  otopi-9999.ebuild:
+  Version bump
+
   26 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> otopi-9999.ebuild:
   Add local version support
 
